add env variable

--- a/charts/simple-ns-chart/templates/deployment.yaml
+++ b/charts/simple-ns-chart/templates/deployment.yaml
@@ -19,3 +19,6 @@ spec:
       - image: nginx
         imagePullPolicy: Always
         name: nginx
+        env:
+          - name: TEST_ENV
+            value: {{ .Values.testEnv | quote }}      
