--- a/charts/simple/templates/deployment.yaml
+++ b/charts/simple/templates/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   labels:
     app: foo
     version: {{ .Chart.Version }}
+  annotations:
+    foo: {{ .Values.foo }}
   name: deploy-default
 spec:
   selector:
