--- a/charts/test-chart/values.yaml
+++ b/charts/test-chart/values.yaml
@@ -1,3 +1,13 @@
-favorite:
-  drink: coffee
-  food: pizza
+annotations:
+  foo: bar
+
+nameOverride: ""
+fullnameOverride: ""
+
+image:
+  repository: nginx
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: ""
+
+resources: {}
